Critic correction - align the title of the box horizontal center - fixed: if the menu-button is clicked, the box is not clicked at the same time - align the contextmenu in mobile size - delete unneeded file "BoxMenu.tsx" because it is now a component outside of the Grid - add PopUpDelete before deleting

--- a/src/components/contextMenu/ContextMenu.css
+++ b/src/components/contextMenu/ContextMenu.css
@@ -1,10 +1,10 @@
 .context-menu {
   position: absolute;
   top: 0;
-  left: 80%;
+  left: 100%;
   background-color: var(--color-bg-2);
   border: 1px solid var(--color-border);
-  padding: 0.5rem;
+  border-radius: 6px;
   z-index: 10;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   display: flex;
@@ -18,7 +18,7 @@
   color: var(--color-text);
   text-align: left;
   cursor: pointer;
-  padding: 0.2rem 0.0rem;
+  width: 100%;
   min-height: 44px;
   min-height: 44px;
 }
@@ -29,6 +29,6 @@
 
 @media (max-width: 480px) {
   .context-menu{
-    left: 87%;
+    left: 40%;
   }
 }
